[package]
name = "beam_enroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["env", "derive"] }
openssl = "0.10.41"

[build-dependencies]
build-data = "0"