[package]
name = "beam_enroll"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"
documentation = "https://github.com/samply/beam-enroll"

[dependencies]
anyhow = "1.0.58"
clap = { version = "4.2.3", features = ["env", "derive"] }
openssl = "0.10.41"

[build-dependencies]
build-data = "0"

[profile.release]
#opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
